# myo_code

./: CMakeLists.txt  README.md
launch/: machine_learning.launch
machine_learning/: package.xml
machine_learning/launch/: machine_learning.launch
machine_learning/src/: graphs.py  machine_learning_node.py  raw2avg.py  rt2turtle.py  spc_game.py
ros_myo-master/launch/: myo.launch
ros_myo-master/scripts/: myo-rawNode.py
src/: input.py  machine_learning_node.py  raw2avg.py  rt2turtle.py
